# serializer version: 1
# name: TestAlignmentSnapshots.test_horizontal_align_center
  '''
  ┌──────────────────────────────────────┐
  │               Centered               │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  └──────────────────────────────────────┘
  '''
# ---
# name: TestAlignmentSnapshots.test_horizontal_align_left
  '''
  ┌──────────────────────────────────────┐
  │ Left aligned                         │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  └──────────────────────────────────────┘
  '''
# ---
# name: TestAlignmentSnapshots.test_horizontal_align_right
  '''
  ┌──────────────────────────────────────┐
  │                        Right aligned │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  └──────────────────────────────────────┘
  '''
# ---
# name: TestComplexTemplateSnapshots.test_dashboard_layout
  '''
  ┌─ Dashboard ──────────────────────────────────────────────────────────────────┐
  │                                                                              │
  │                                                                              │
  ┌─ Statistics ─────────────────────────┐───────────────────────────────────────┘
  │                                      ││                                      │
  │ Messages: 5                          ││ [0m< Compose Message >[0m                  │
  │ Tasks: 12                            ││ [0m< View Tasks >[0m                       │
  │ Alerts: 2                            ││ [0m< Settings >[0m                         │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  │                                      ││                                      │
  └──────────────────────────────────────┘└──────────────────────────────────────┘
  ┌─ Recent Activity ────────────────────────────────────────────────────────────┐
  │                                                                              │
  │ - Task completed: Review PR #123                                             │
  │ - New message from Alice                                                     │
  │                                                                              │
  └──────────────────────────────────────────────────────────────────────────────┘
  '''
# ---
# name: TestElementSnapshots.test_button_rendering
  '\x1b[0m< Click Me! >\x1b[0m'
# ---
# name: TestElementSnapshots.test_textinput_rendering
  '\x1b[0m[Enter text...       ]\x1b[0m'
# ---
# name: TestElementSnapshots.test_textinput_with_value
  '\x1b[0m[Current Value       ]\x1b[0m'
# ---
# name: TestFrameSnapshots.test_frame_double_border
  '''
  ╔════════════════════════════╗
  ║ Test content with double b ║
  ║                            ║
  ║                            ║
  ║                            ║
  ║                            ║
  ║                            ║
  ╚════════════════════════════╝
  '''
# ---
# name: TestFrameSnapshots.test_frame_multiline_content
  '''
  ┌──────────────────────────────────────┐
  │ Line 1                               │
  │ Line 2                               │
  │ Line 3                               │
  │ Line 4                               │
  │ Line 5                               │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  │                                      │
  └──────────────────────────────────────┘
  '''
# ---
# name: TestFrameSnapshots.test_frame_rounded_border
  '''
  ╭────────────────────────────╮
  │ Test content with rounded  │
  │                            │
  │                            │
  │                            │
  │                            │
  │                            │
  ╰────────────────────────────╯
  '''
# ---
# name: TestFrameSnapshots.test_frame_single_border
  '''
  ┌────────────────────────────┐
  │ Test content with single b │
  │                            │
  │                            │
  │                            │
  │                            │
  │                            │
  └────────────────────────────┘
  '''
# ---
# name: TestFrameSnapshots.test_frame_with_padding
  '''
  ┌─────────────────────────────────┐
  │                                 │
  │  Padded content                 │
  │                                 │
  │                                 │
  │                                 │
  │                                 │
  │                                 │
  │                                 │
  └─────────────────────────────────┘
  '''
# ---
# name: TestLayoutSnapshots.test_nested_layout
  '''
  ┌─ Top Left ──────────────────────┐┌─ Top Right ─────────────────────┐
  │                                 ││                                 │
  │ TL Content                      ││ TR Content                      │
  │                                 ││                                 │
  │                                 ││                                 │
  │                                 ││                                 │
  │                                 ││                                 │
  │                                 ││                                 │
  │                                 ││                                 │
  └─────────────────────────────────┘└─────────────────────────────────┘
  ┌─ Bottom ───────────────────────────────────────────────────────────┐
  │                                                                    │
  │ Bottom content spanning full width                                 │
  │                                                                    │
  │                                                                    │
  │                                                                    │
  │                                                                    │
  │                                                                    │
  │                                                                    │
  └────────────────────────────────────────────────────────────────────┘
  '''
# ---
# name: TestLayoutSnapshots.test_percentage_width_layout
  '''
  ┌─ 30% ──────────┐┌─ 70% ──────────────────────────────────┐
  │                ││                                        │
  │ Narrow         ││ Wide                                   │
  │                ││                                        │
  │                ││                                        │
  │                ││                                        │
  │                ││                                        │
  │                ││                                        │
  │                ││                                        │
  └────────────────┘└────────────────────────────────────────┘
  '''
# ---
# name: TestLayoutSnapshots.test_simple_hstack_layout
  '''
  ┌─ Left ───────────┐┌─ Center ─────────┐┌─ Right ──────────┐
  │                  ││                  ││                  │
  │ Left             ││ Center           ││ Right            │
  │                  ││                  ││                  │
  │                  ││                  ││                  │
  │                  ││                  ││                  │
  │                  ││                  ││                  │
  │                  ││                  ││                  │
  │                  ││                  ││                  │
  └──────────────────┘└──────────────────┘└──────────────────┘
  '''
# ---
# name: TestLayoutSnapshots.test_simple_vstack_layout
  '''
  ┌─ Top ──────────────────────────────────────────┐
  │                                                │
  │ Top content                                    │
  │                                                │
  └────────────────────────────────────────────────┘
  ┌─ Middle ───────────────────────────────────────┐
  │                                                │
  │ Middle content                                 │
  │                                                │
  └────────────────────────────────────────────────┘
  ┌─ Bottom ───────────────────────────────────────┐
  │                                                │
  │ Bottom content                                 │
  │                                                │
  └────────────────────────────────────────────────┘
  '''
# ---
# name: TestOverflowSnapshots.test_overflow_clip
  '''
  ┌───────────────────────┐
  │ This is a very long l │
  │                       │
  │                       │
  └───────────────────────┘
  '''
# ---
# name: TestOverflowSnapshots.test_overflow_wrap
  '''
  ┌───────────────────────┐
  │ This is a very long   │
  │ line that will wrap   │
  │ to multiple lines     │
  │                       │
  │                       │
  │                       │
  └───────────────────────┘
  '''
# ---
